Update SHA1Utils.java
调整base64加密为java.util包实现，解决openjdk下编译报错的问题。